# crossonic

./: .gitignore  README.md  analysis_options.yaml  auth.go  build.yaml  go.mod  go.sum  handler.go  helpers.go  pubspec.yaml  routes.go
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
android/: .gitignore  settings.gradle
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/gradle/wrapper/: gradle-wrapper.properties
crossonic/: README.md
crossonic-server/: Dockerfile  config.go  go.mod  go.sum  main.go  routes.go
crossonic/audioplayers_linux_stub/: pubspec.yaml
crossonic/lib/: main.dart
crossonic/lib/routing/: router.dart
crossonic/lib/widgets/: artist_chooser.dart  cover_art.dart  song.dart  song_collection.dart
crossonic/linux/: .gitignore  CMakeLists.txt  gstreamer.cc
crossonic/windows/: CMakeLists.txt
crossonic/windows/runner/: main.cpp
dependency_overrides/audio_service_mpris/: LICENSE  README.md  pubspec.yaml
dependency_overrides/audio_service_mpris/lib/: audio_service_mpris.dart  metadata.dart  mpris.dart
dependency_overrides/flutter_secure_storage/flutter_secure_storage_darwin/: pubspec.yaml
dependency_overrides/flutter_secure_storage/flutter_secure_storage_macos/: pubspec.yaml
dependency_overrides/path_provider_linux/: README.md
dependency_overrides/stubs/audioplayers_android/: pubspec.yaml
dependency_overrides/stubs/audioplayers_darwin/: pubspec.yaml
dependency_overrides/stubs/audioplayers_linux/: pubspec.yaml
dependency_overrides/stubs/audioplayers_macos/: pubspec.yaml
dependency_overrides/stubs/audioplayers_windows/: pubspec.yaml
dependency_overrides/stubs/flutter_secure_storage_linux/: pubspec.yaml
dependency_overrides/stubs/media_kit_libs_android_audio/: pubspec.yaml
drift_schemas/db/: drift_schema_v1.json  drift_schema_v10.json  drift_schema_v2.json  drift_schema_v3.json  drift_schema_v4.json  drift_schema_v5.json  drift_schema_v6.json  drift_schema_v7.json  drift_schema_v8.json  drift_schema_v9.json
ios/: Podfile
ios/Runner/: ExportOptions.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  app_shortcuts.dart  exceptions.dart  fetch_status.dart  integrate_appimage.dart  integrate_appimage_viewmodel.dart  main.dart  page_transition.dart  version_checker.dart  version_checker_viewmodel.dart  window_listener.dart
lib/components/: album.dart  app_bar.dart  chooser.dart  collection_page.dart  large_cover.dart  playlist.dart  song.dart  song_collection.dart
lib/components/state/: layout.dart
lib/config/: providers.dart
lib/features/album/: album_page.dart
lib/features/albums/: albums_page.dart
lib/features/artist/: artist_page.dart
lib/features/auth/: auth.dart
lib/features/browse/: browse_content.dart  browse_page.dart
lib/features/connect/: connect_page.dart
lib/features/login/: login.dart
lib/features/lyrics/: lyrics_page.dart
lib/features/playlist/: playlist_page.dart
lib/features/playlists/: create_playlist_page.dart  playlists.dart  playlists_page.dart
lib/features/queue/: queue_page.dart
lib/features/search/: search_page.dart
lib/features/songs/: songs_page.dart
lib/routing/: auth_guard.dart  main_toplevel_guard.dart  router.dart
lib/services/: crossonic_server.dart  exceptions.dart
lib/utils/: command.dart  exceptions.dart  exit.dart  fetch_status.dart  format.dart  result.dart  result_toast.dart  throttle.dart
lib/views/: login.dart  main.dart
lib/widgets/: album.dart  app_bar.dart  artist_chooser.dart  chooser.dart  confirmation.dart  cover_art.dart  large_cover.dart  playlist.dart  song.dart  song_collection.dart
linux/: CMakeLists.txt  gstreamer.cc  gstreamer.h  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
native_bindings/gstreamer/gstreamer_ffi/src/: CMakeLists.txt  gst_ios_init.h  gst_plugin_init_android.c  gstreamer_ffi.c  gstreamer_ffi.h
native_bindings/gstreamer_binding/: ffigen.yaml  pubspec.yaml
plugins/audio_player/: pubspec.yaml
scripts/appimage/: AppImageBuilder_x86_64.yml
scripts/dmg/: config.json  crossonic.icns
web/: index.html  loading.css  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+662 files in other folders)
